Karen NAR figures from Rick
git-svn-id: https://microb98.med.upenn.edu/svn/scott/thesis@9960 acd2042c-187b-11de-8279-d8d34a11d372

--- a/thesis/conclusion/conclusion.tex
+++ b/thesis/conclusion/conclusion.tex
@@ -3,30 +3,42 @@
 \chapter{Conclusions and future directions}
 \graphicspath{{im/}{conclusion/im/}}
 
-In this dissertation, we described studies to characterize the nature of HIV-1 latency, expression and alternative splicing and host cells' response to infection.
+In this dissertation, we described studies to characterize the nature of HIV-1 latency, characterize expression and alternative splicing and host cell response to infection and develop alternative methods for detection of infection and quantification of viral loads.
+
 
 \section{Latency and integration location}
 
-	The chromosomal location of integration was shown to affect proviral latency but the mechanisms appear to differ between cell culture models. This suggests that either some cell culture models do not accurately reflect latency in patients or that there are diverse subsets of cells of with differing mechanisms of latency. 
+	In Chapter \ref{chapLatency}, we showed that the chromosomal location of integration affects proviral latency but the mechanisms appear to differ between cell culture models. This suggests that either some cell culture models do not accurately reflect latency in patients or that there are diverse subsets of cells with differing mechanisms of latency within patients.
 
-	Current efforts at `shock and kill' therapy focus on histone deacetylase inhibitors. It seems that acetylation was the main determinant of latency then we would have seen a strong signal in these cell culture data. A recent study of potential latency modulators in various cell culture models revealed little agreement [[work]][[also little effect?]]. Treatment with these therapies in patients have shown small increases in viral RNA but little effect on latency [[work]].
+	Cell culture models are currently used to screen potentially therapeutic compounds. If some cell culture models are not representative of \textit{in vivo} conditions then potential treatments may be discarded or marked for development erroneously. Further comparisons between additional cell culture models and additional replicates of existing models might allow discrimination between batch/lab effects and reveal patterns in model behavior. Comparison with cells extracted from patients or infected lab animals might offer a gold standard comparison although it is difficult to obtain large amounts of cells and difficult to distinguish defective provirus from latent provirus in such populations. %Perhaps cell sorting for a marker of viral activity, applying a strong inducing agent and sorting again for newly expressed virus.
+
+	Various treatments are now being considered for the reactivation of latent provirus \citep{Spina2013}. To further understand the mechanisms of these treatments, it would be interesting to compare latent provirus induced by a treatment to latent viable provirus remaining uninduced. Repeated cell sorting and integration site sequencing might provide insight on mechanism. For example, one could first sort out cells with active provirus, then treat with the potential latency modulator and sort out cells with newly active provirus and then treat with a strong inducer or alternative stimuli and sort out cell with these newly activated provirus. This would give two subsets of cells where latent viruses had been activated by treatment and cells which were not activated by treatment but still inducible. Synergies between treatments could be assessed and the location of integration sites could be determined and used to locate patterns of genomic features correlated with induction for each treatment.
+
+	Current efforts at ``shock and kill'' therapy focus on histone deacetylase inhibitors. If there are diverse mechanisms of latency within patients then much of the latent reservoir may remain unactivated by single target therapies.  A recent study of potential latency modulators found that no single cell culture model reliably predicted in various cell culture models revealed little agreement \citep{Spina2013} [[work]][[also little effect?]]. Clinical trials with these therapies have shown some small increases in viral RNA \citep{Archin2012} but little decrease in the latent reservoir of HIV \citep{Archin2014,Spivak2014}. majority of latent provirus not reactivated by SAHA \citep{Cillo2014}. These results since 10,000-fold or more reductions of the latent reservoir are likely necessary for a functional cure for HIV \citep{Hill2014}.
 
 %http://journals.plos.org/plospathogens/article?id=10.1371/journal.ppat.1003834
 
-Further clarification using more detailed sequencing in more time points, cell types and strains of HIV-1 and other lentiviruses rema
 
 A common theme was that cell lines and \textit{in vitro} models of these replication steps often disagree with each other and with primary cell data. 
 
-PacBio was bad. Figure? Do better
 
 Comparison among labs and cell types/viruses at same time. Standardize.
 
 Non polyadenylated RNA. Strand specific sequencing. Longer reads and longer fragments.
 
 \section{HIV-1 alternative splicing}
+Further clarification using more detailed sequencing in more time points, cell types and strains of HIV-1 and other lentiviruses rema
+
+PacBio was bad. Figure? Do better
+
 In addition an important subset of HIV are the founder viruses transmitted between hosts \citep{Keele2008,Salazar-Gonzalez2009}. These viruses are not well studied and perhaps their splicing and gene expression differ from the rest of the viral swarm of late-term patients.
 
 \section{Host expression during HIV infection}
+Localization nucleus vs cytoplasm
+
+Cell types, macrophages
+
+Infection, sorting
 
 Cell lines bad
 
@@ -49,5 +61,6 @@ Endogenous retrovirus
 	\end{figure}
 
 \subsection{Conclusions}
+	These studies contribute the study and treatment of HIV-1 by revealing aspects of latency, expression and host response. They highlight the importance of primary cell models and the effects that host cell can have on viral processes. With rapidly increasing sequencing throughput, studies like those presented in this thesis offer the opportunity for a deeper and broader understanding of HIV-1 biology and host response and further development of diagnostics and therapeutics.
 
 \end{document}
